# ai-sandbox

./: .gitignore  Makefile  pyproject.toml  requirements.txt
agent/: autogen.ipynb  langchain.ipynb
beauty/: ch01-quickstart.ipynb  ch02-sentiment.ipynb  ch02-sentiment.py  ch02_food_review.py  ch02_sentiment.py  ch03-chatbot.ipynb  ch05-classification.ipynb  ch07-summary.ipynb  ch09-search.ipynb  ch10-rag.ipynb  ch22-huggingface.ipynb
langchain/: tutorial.ipynb
volcengine/: vision.ipynb
