[tool.poetry]
name = "ai-sandbox"
version = "0.1.0"
description = ""
authors = ["Jerry <zhangji87@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12"
numpy = "^1.26.4"
openai = "^1.60.1"
python-dotenv = "^1.0.1"
pandas = "^2.2.3"
scikit-learn = "^1.6.1"
jupyter = "^1.1.1"
matplotlib = "^3.10.0"
langchain = "^0.3.15"
llama-index = "^0.12.14"
spacy = "^3.8.4"
langchain-openai = "^0.3.2"
sentencepiece = "^0.2.0"
tiktoken = "^0.8.0"
backoff = "^2.2.1"
pyarrow = "^19.0.0"
pymilvus = "^2.5.4"
requests = "^2.32.3"
torch = "~2.2.2"
langchain-community = "^0.3.17"
autogen-agentchat = "^0.4.7"
autogen-ext = {extras = ["openai"], version = "^0.4.7"}
playwright = "^1.50.0"

[[tool.poetry.source]]          
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
